2014-05-14  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (0.9.1)

	- Check that if we are in Windows, Gerardus is not on a network drive, as this
	will make CMake fail. As the error given by CMake will say nothing about the
	problem being the network drive, this is very confusing and annoying.

2014-05-13  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/FileFormatToolbox/vmu2png.m: (0.1.0)

	- VMU2PNG Convert a microscope image file from .vmu to .png
	format.

2014-05-10  Ramon Casero  <rcasero@gmail.com>

	* matlab/FileFormatToolbox/scimat_save.m: (0.6.0)

	- Add output formats PNG (that allows saving images larger than
	4GB) with lossless compression, JPEG2000 and TIFF with
	AdobeDeflate compression.

2014-05-08  Ramon Casero  <rcasero@gmail.com>

	* matlab/FileFormatToolbox/scimat_load.m: (0.4.1)

	- Fix bug. Paul Cormack from Hamamatsu replied that pixel size is
	PhysicalWidth / PixelWidth, instead of PhysicalWidth /
	(PixelWidth-1).

	* matlab/FileFormatToolbox/scimat_load.m: (0.4.0)

	- Add new file format. Now we can read also .vmu (Hamamatsu
	Uncompressed Virtual Microscope Specimen) files.

	* matlab/FiltersToolbox/scinrrd_crop.m: (0.1.1)

	- When croppring, allow for a 4th dimension so that we can pass
	colour images with (row, col, slice, channel).

	- Update deprecated narginchk(), nargoutchk() syntax.

	* matlab/FileFormatToolbox/scinrrd_im2nrrd.m: (0.1.3)

	- Remove the limitation that input image must have 3 dimensions so
	that we can pass colour images with (row, col, slice, channel).

2014-05-07  Ramon Casero  <rcasero@gmail.com>

	* Rename matlab/FileFormatToolbox/scinrrd_load.m as matlab/FileFormatToolbox/scimat_load.m: (0.3.0)
	* Rename matlab/FileFormatToolbox/scinrrd_save.m as matlab/FileFormatToolbox/scimat_save.m: (0.5.0)
	* matlab/CardiacToolbox/process_misas_patient.m: (0.1.1)
	* matlab/FileFormatToolbox/scinrrd_im2nrrd.m: (0.1.2)
	* matlab/FileFormatToolbox/scinrrd_tiff2nrrd.m: (0.2.5)